# creatorweave

./: .gitignore  BATCH_OPERATIONS_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  PHASE4_IMPLEMENTATION_SUMMARY.md  README.en.md  README.md  README.zh.md  USER_GUIDE.md  bfosa.pen  edgeone.json  pnpm-lock.yaml
.claude/: ralph-loop.local.md
docs/: MCP_INTEGRATION_DESIGN.md  PYTHON_AGENT_IMPLEMENTATION_PLAN.md  agent-system.md  pi-ai-integration-design.md  plugin-system-architecture.md  remote-session-architecture.md  sync-preview-feature-prd.md  sync-preview-history.md
docs/api/: README.md
docs/architecture/: overview.md
docs/design/: attachment-directory-design.md  documentation-entry-design.md  message-table-storage.md  session-conversation-unification.md  subagent-prerequisite-for-llm-wiki.md  设计规范-20260208.md
docs/development/: quick-start.md  setup.md  ui-package-usage.md
docs/plugin-system/: iframe-rendering-guide.md
mobile-web/: package.json  tailwind.config.js  tsconfig.json
plugins/: README.md
scripts/: dev.sh
wasm/: Cargo.toml
wasm/crates/example-plugins/line-counter/: Cargo.toml
wasm/crates/example-plugins/line-counter/src/: lib.rs
wasm/crates/example-plugins/md5-calculator/: Cargo.toml
wasm/crates/example-plugins/md5-calculator/src/: lib.rs
web/: .eslintrc.json  PHASE4_USER_GUIDE.md  THREADING_IMPLEMENTATION.md  index.html  middleware.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite-plugin-docs-sync.ts  vite-plugin-sync-guard.ts  vite.config.ts
web/public/: sw.js  (+6 more)
(+612 files in other folders)
